--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ email: jarkko@vimo.fi
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
+page:
+  -title: Build for Developers 
+
 # Team names, titles and social links
 people:
 - name: Jarkko Moilanen
