--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://apieconomyhacklab.github.io
-baseurl: /buildfordevelopers
+# url: https://apieconomyhacklab.github.io
+# baseurl: /buildfordevelopers
 
 # Site settings
 title: Build for Developers
