--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: b00404
-  secondary: fec503   
+  secondary: ff9933   
   secondary-dark: 333
   muted: 777
 
