Modded primary color

--- a/_data/template.yml
+++ b/_data/template.yml
@@ -2,8 +2,8 @@
 color:
   # primary: b00404
   primary: 4f9698
-  secondary: ff9933 
-  tertiary: 333   
+  secondary: 225656 
+  tertiary: 4F0A0A   
   secondary-dark: 333
   muted: 777
 
