Modded primary color

--- a/_data/template.yml
+++ b/_data/template.yml
@@ -3,7 +3,7 @@ color:
   # primary: b00404
   primary: 4f9698
   secondary: 225656 
-  tertiary: 4F0A0A   
+  tertiary: 001B1B   
   secondary-dark: 333
   muted: 777
 
