--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   # primary: b00404
-  primary: 083F08
+  primary: fff
   secondary: 225656 
   tertiary: 001B1B   
   secondary-dark: 333
