Modded call for action

--- a/_data/template.yml
+++ b/_data/template.yml
@@ -3,7 +3,7 @@ color:
   # primary: b00404
   primary: fff
   secondary: 225656 
-  tertiary: 001B1B   
+  tertiary: fff   
   secondary-dark: 333
   muted: 777
 
