--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ people:
     - title: github
       url: https://github.com/anttiviljami/
 
-- name: Developer Two
+- name: Your name here?
   pic: 3
   position: Developer (Advisory Board)
   social:
