Mod team content

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,17 @@ people:
     - title: google-plus
       url: #
 
+- name: Your name here?
+  pic: 3
+  position: Developer (Advisory Board)
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
