--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-# url: https://apieconomyhacklab.github.io
+# url: apieconomyhacklab.github.io
 # baseurl: /buildfordevelopers
 
 # Site settings
 title: Build for Developers
 email: jarkko@vimo.fi
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Book about Application Developers as Customers in API Economy. To be published 2019. Author Jarkko Moilanen (PhD)"
 
 
 page:
