--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# url: apieconomyhacklab.github.io
-# baseurl: /buildfordevelopers
+url: https://buildfordevelopers.com
+baseurl: /
 
 # Site settings
 title: Build for Developers
