--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://buildfordevelopers.com
-baseurl: /
+#url: https://buildfordevelopers.com
+#baseurl: /
 
 # Site settings
 title: Build for Developers
