--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-#url: https://buildfordevelopers.com
-#baseurl: /
+url: https://buildfordevelopers.com
+baseurl: /
 
 # Site settings
-title: Build for Developers
+title: Build for Developers - Application Developers as Customers in API Economy
 email: jarkko@vimo.fi
 description: "Book about Application Developers as Customers in API Economy. To be published 2019. Author Jarkko Moilanen (PhD)"
 
