--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://buildfordevelopers.com
 baseurl: /
 
 # Site settings
-title: Build for Developers - Application Developers as Customers in API Economy
+title: Build for Developers
 email: jarkko@vimo.fi
 description: "Book about Application Developers as Customers in API Economy. To be published 2019. Author Jarkko Moilanen (PhD)"
 
