Added Nazia's pic

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ people:
       url: https://www.linkedin.com/in/juggeldahl/
 
 - name: Nazia Hasan
-  pic: 5
+  pic: nazia
   position: Visual Designer
   social:
     - title: twitter
