--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /
 # Site settings
 title: Build for Developers
 email: jarkko@vimo.fi
-description: "Book about Application Developers as Customers in API Economy. To be published 2019. Author Jarkko Moilanen (PhD)"
+description: "Book about Application Developers as Customers in the API Economy. To be published 2019. Author Jarkko Moilanen (PhD)"
 
 
 page:
