--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,17 @@ people:
 #    - title: linkedin
 #      url: https://www.linkedin.com/in/naziahasan/
 
+
+ 
+- name: Randall Arnold
+  pic: 5
+  position: Co-Editor
+  social:
+    - title: twitter
+      url: https://twitter.com/texrat
+    - title: linkedin
+      url: https://www.linkedin.com/in/texrat/
+
 - name: Your name here?
   pic: 5
   position: Developer (Advisory Board)
@@ -80,6 +91,7 @@ people:
       url: #
     - title: google-plus
       url: #
+
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
