--- a/_config.yml
+++ b/_config.yml
@@ -61,16 +61,14 @@ people:
     - title: linkedin
       url: https://www.linkedin.com/in/kimberly-grice-01182084/
 
-# - name: Nazia Hasan
-#  pic: nazia
-#  position: Visual Designer
-#  social:
-#    - title: twitter
-#      url: https://twitter.com/NazarahTheCat
-#    - title: linkedin
-#      url: https://www.linkedin.com/in/naziahasan/
-
-
+- name: Nazia Hasan
+  pic: nazia
+  position: Visual Designer
+  social:
+    - title: twitter
+      url: https://twitter.com/NazarahTheCat
+    - title: linkedin
+      url: https://www.linkedin.com/in/naziahasan/
  
 - name: Randall Arnold
   pic: 5
