--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ people:
 
 - name: Nazia Hasan
   pic: nazia
-  position: Visual Designer
+  position: Visual Designer & Author
   social:
     - title: twitter
       url: https://twitter.com/NazarahTheCat
