added Randall's pic

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ people:
       url: https://www.linkedin.com/in/naziahasan/
  
 - name: Randall Arnold
-  pic: 5
+  pic: randall
   position: Co-Editor
   social:
     - title: twitter
